GNOME Bugzilla – Bug 688870
mpegtsmux: does not propagate flow status
Last modified: 2012-11-28 18:46:27 UTC
mpegtsmux_collected_buffer() ignores flow status returned from mpegtsmux_push_packets (). This breaks the propagation of the flow status upstream.
Created attachment 229633 [details] [review] Proposed patch with the accompanying test.
Thanks for the patch, fixed up C++ comments and the buffer leaks: commit 76b8e8be513d9f439549ecb5d1cbf7aa2da8e658 Author: Krzysztof Konopko <krzysztof.konopko@youview.com> Date: Thu Nov 22 10:57:25 2012 +0000 mpegtsmux: propagate flow returns And add a unit test. https://bugzilla.gnome.org/show_bug.cgi?id=688870 PS: would be great if you could submit the patch in git format-patch format next time.
> PS: would be great if you could submit the patch in git format-patch format next time. Silly me. I used gitk to export the patch rather than git diff. Will do better next time :)
I really did mean git format-patch. When you have created your commit(s), you do: $ git format-patch -1 0001-mpegtsmux-propagate-flow-returns.patch And it will create numbered .patch files, one for each commit (-1 is for the last commit, -2 for the last two commits, etc.). That file is the one to attach in bugzilla. We can then apply it using $ git am 0001*.patch (It will look like a mail with a few mail headers, as it happens, incl. a sender date and subject line). (There are also bugzilla helpers for git somewhere that allow you to directly file a bug from a commit).