mpegtsmux: propagate flow returns

And add a unit test.

https://bugzilla.gnome.org/show_bug.cgi?id=688870